# fifo

./: .travis.yml  CMakeLists.txt  README.md
src/: fifo.c
test/: CMakeLists.txt  test.c
